# libchess

./: .gitignore  CMakeLists.txt  collect.py  main.cpp  test.cpp
python/: __init__.py  install.bat  libchess.pyi  libchess_py.cpp  setup.py
src/: board.ipp  libchess.cpp  libchess.hpp
